# iiotgateway

./: .clang-format  .gitignore  README.md  TODO.md  build.py  init-environment.py  install-dependencies.py  install.sh
IIoTDashboard/: CMakeLists.txt  Login.qml  LoginOld.qml  LoginScreen.qml  MQTT.qml  Main.qml  ModbusRTU.qml  ModbusRequest.qml  Settings.qml  control  deploy.sh  index.html  main.qml  qml.qrc
IIoTDashboard/debian/: postinst
IIoTDashboard/nginx/: iiotdashboard
IIoTDashboard/scripts/: build.py  build.sh  deploy.py  deploy.sh
IIoTDashboard/sources/: backend.cpp  main.cpp
IIoTDashboard/src/: IIoTDashboard.h  backend.cpp  backend.h  deviceclient.cpp  deviceclient.h  gatewaycontroller.cpp  gatewaycontroller.h  main.cpp
IIoTDashboard/ui/: Main.qml  ModbusRTU.qml  ModbusRequest.qml  Settings.qml
IIoTDashboard/ui/components/menu/: MenuButton.qml  MenuItemDelegate.qml
IIoTDashboard/ui/components/network/: IpGroupBox.qml
IIoTDashboard/ui/modbus/: ModbusRTU.qml
IIoTDashboard/ui/mqtt/: MQTT.qml  PubSubGroup.qml
IIoTDashboard/ui/pages/: Communication.qml  Settings.qml
IIoTDashboard/www/: index.html
IIoTGateway/: CMakeLists.txt  build.sh  control  deploy.sh  iiotgateway.service  main.cpp  postinst  preinst  runservice.sh
IIoTGateway/Application/: CMakeLists.txt  application.qrc  control.cpp  control.h  dbconnection.cpp  dbconnection.h  dbstorage.cpp  dbstorage.h  gateway.cpp  gateway.h  interface.cpp  interface.h  storage.h  storageinterface.h
IIoTGateway/Application/scripts/: protocols.sql  settings.sql
IIoTGateway/Communication/: CMakeLists.txt
IIoTGateway/Communication/modbus/: commmodbus.cpp  commmodbus.h  commmodbusclientadapter.cpp  commmodbusrequestparser.cpp  commmodbussettingsparser.cpp  commmodbussettingsparser.h  commmodbustcp.cpp
IIoTGateway/Communication/mqtt/: commmqtt.cpp  commmqttcallback.cpp  commmqttsettingsparser.cpp  commmqttsettingsparser.h
IIoTGateway/Device/: CMakeLists.txt
IIoTGateway/Device/driver/: driver_global.h
IIoTGateway/Device/driver/gpio/: fakegpiopin.cpp  gpiopin.h  gpiopinfactory.cpp  gpiopinfactory.h  hostgpiopin.cpp  (+3 more)
IIoTGateway/Device/logging/: logging_global.h  loghandler.h
IIoTGateway/Device/network/: hostnetworkmanager.cpp  hostnetworkmanager.h  network_global.h  networkmanagerfactory.cpp  networkmanagerfactory.h  raspberrynetworkmanager.cpp  raspberrynetworkmanager.h
IIoTGateway/Device/system/: hostreboot.cpp  hostreboot.h  linuxreboot.h  rebootfactory.cpp  rebootfactory.h  system_global.h
IIoTGateway/Drivers/: CMakeLists.txt
IIoTGateway/Drivers/gpio/: gpio_global.h  gpiomode.h  gpiopin.h
IIoTGateway/Main/: CMakeLists.txt  main.cpp  main.h
IIoTGateway/Protocols/: CMakeLists.txt  commfactory.cpp  commfactory.h  comminterface.h
IIoTGateway/Protocols/modbus/: commmodbus.cpp  commmodbus.h  commmodbus_global.h  commmodbusclientadapter.cpp  commmodbusclientadapter.h  commmodbusclientinterface.h  commmodbusrequestparser.cpp  commmodbusrequestparser.h  commmodbusrtu.cpp  commmodbusrtu.h  commmodbussettingsparser.cpp  commmodbussettingsparser.h  commmodbustcp.cpp  commmodbustcp.h  modbusclientadapter.cpp  modbusclientadapter.h  modbusclientinterface.h  modbusclientwrapper.cpp  modbusclientwrapper.h  modbusjsonparser.cpp  modbusjsonparser.h  modbussettingsparser.cpp  modbussettingsparser.h  writeregistermodel.cpp  writeregistermodel.h
IIoTGateway/Protocols/mqtt/: commmqtt.cpp  commmqtt.h  commmqtt_global.h  commmqttactionlistener.cpp  commmqttactionlistener.h  commmqttcallback.cpp  commmqttcallback.h  commmqttsettingsparser.cpp  commmqttsettingsparser.h  mqttsettingsparser.cpp  mqttsettingsparser.h
IIoTGateway/Tests/: CMakeLists.txt  mockmodbusclient.h  testcommmodbus.cpp  testcommmodbus.h  testcommmodbusrequestparser.cpp  testcommmodbusrequestparser.h  testcommmodbussettingsparser.cpp  testcommmodbussettingsparser.h  testcommmqttsettingsparser.cpp  testcommmqttsettingsparser.h  testmodbusjsonparser.cpp  testmodbusjsonparser.h  testmodbussettingsparser.cpp  testmodbussettingsparser.h  testmqttsettingsparser.cpp  testmqttsettingsparser.h  tests.qrc  testutils.cpp  testutils.h
IIoTGateway/Tests/requests/: readmultiple.json  writeone.json
IIoTGateway/Tests/settings/: modbusrtu.json  mqtt.json
IIoTGateway/debian/: postinst
IIoTGateway/scripts/: build.sh  deploy.sh  tests.sh
IIoTGateway/service/: iiotgateway.service
gateway/: .clang-format  CMakeLists.txt
gateway/Application/: CMakeLists.txt  application.qrc  control.cpp  control.h  dbconnection.cpp  dbstorage.cpp  dbstorage.h  gateway.cpp  gateway.hpp
gateway/Application/scripts/: history.sql  protocols.sql  settings.sql  users.sql
gateway/Communication/: CMakeLists.txt  comm_global.h  comm_global.hpp  commfactory.cpp  commfactory.h  commfactory.hpp  comminterface.h  comminterface.hpp
gateway/Communication/modbus/: commmodbus.cpp  commmodbus.h  commmodbus.hpp  commmodbus_global.h  commmodbus_global.hpp  commmodbusclientadapter.cpp  commmodbusclientadapter.hpp  commmodbusclientinterface.hpp  commmodbusrequestparser.cpp  commmodbusrequestparser.h  commmodbusrequestparser.hpp  commmodbusrtu.cpp  commmodbusrtu.h  commmodbusrtu.hpp  commmodbussettingsparser.cpp  commmodbussettingsparser.h  commmodbussettingsparser.hpp  commmodbustcp.cpp  commmodbustcp.h  commmodbustcp.hpp
gateway/Communication/mqtt/: commmqtt.cpp  commmqtt.h  commmqtt.hpp  commmqttactionlistener.cpp  commmqttactionlistener.hpp  commmqttcallback.cpp  commmqttcallback.hpp  commmqttsettingsparser.cpp  commmqttsettingsparser.h  commmqttsettingsparser.hpp
gateway/Device/: device_global.h
gateway/Device/logging/: loghandler.cpp  loghandler.h
gateway/Device/network/: fakenetworkmanager.cpp  fakenetworkmanager.h  networkmanager.h  networkmanagerfactory.h  raspberrynetworkmanager.cpp  raspberrynetworkmanager.h
gateway/Device/system/: fakereboot.cpp  fakereboot.h  linuxreboot.cpp  reboot.h
gateway/Main/: CMakeLists.txt  main.cpp
gateway/Tests/: CMakeLists.txt
gateway/Tests/src/: main.cpp
gateway/scripts/: build.py  deploy.py  install.py  tests.py
(+79 files in other folders)
